# crimes_map

./: README.md  docker-compose.yml  pyproject.toml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: dependencies.py  main.py
api/app/data_access_layer/: crime_locations.py
api/app/routers/: crimes.py
api/app/tests/data_acess_layer/: conftest.py  crime_locations.py
api/credentials/: credentials.json
app/: dependencies.py
app/data_access_layer/: crime_locations.py  crimes_locations.py
app/routers/: crimes.py
app/tests/data_acess_layer/: conftest.py  crime_locations.py  crimes_locations.py
dashboard/: Dockerfile  pyproject.toml
dashboard/app/src/: client.py  dashboard.py
